# python-template

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: python-package.yaml
project/: hello_world.py  project_test.py
