[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "project"
version = "0.0.0"
description = ""
authors = [{ name = "Cemlyn Waters", email = "cemlynwaters@gmail.com" }]
requires-python = ">=3.8"
classifiers = ["Topic :: Software Development"]
dependencies = []

[project.optional-dependencies]
dev = [
    "build>=0.8.0",
    "mypy>=0.971",
    "pre-commit>=2.20.0",
    "pytest>=7.1.2",
    "python-semantic-release>=7.28.0"
]

[tool.semantic_release]
branch = "main"
version_toml = "pyproject.toml:project.version"
upload_to_repository = false
build_command = "python -m build"
hvcs = "github"

[tool.setuptools]
zip-safe = false

[tool.mypy]
incremental = true
